--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
                     </div>
-                    <a href="" download  class="btn btn2 ">Download resume</a>
+                    <a href="images/resume111.pdf" download  class="btn btn2 ">Download resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
