--- a/index.html
+++ b/index.html
@@ -64,16 +64,15 @@
                             <li><span>Git</span><br></li>
                             <li><span>Tableau</span><br></li>
                             <li><span>Excel</span><br></li>
-                            <li><span>Analytics</span><br></li>
-                            <li><span>Attention to detail</span><br></li>
-                            <li><span>Mongodb</span><br></li>
+                            <li><span>Ajax</span><br></li>
+                            <li><span>MS Ofice</span><br></li>
+                            <li><span>Azure- 900 and Azure-104 </span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>Farid institute </span><br>Frontend django developer <br>09-22  12-22</li>
-                            <li><span>KNIPSS</span><br>Game developer <br>03-22 07-22</li>
-                            <li><span>MERN stack</span></li>
+                            <li><span></span></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
