--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>Kamla Nehru Institute of physical and social science</span><br>11-2020  -   current</li>
+                            <li><span>Kamla Nehru Institute of physical and social science</span><br>11/2020  -   current</li>
                             <li><span>St. Xavier's high school</span></li>
                     </div>
                     <div class="tab-contents" id="voulenteer">
