--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
                     </div>
-                    <a href="images/Main resume.pdf" download  class="btn btn2 ">Download resume</a>
+                    <a href="images/new resume .pdf" download  class="btn btn2 ">Download resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
