--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <div class="tab-contents" id="voulenteer">
                         <ul>
                             <li><span>Samajwadi party </span><br> Activist</li>
+                             <li><span>KNIPSS </span><br> Activist</li>
                         </ul>
                     </div>
                     </div>
