--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <h1 class="sub-title">About me</h1>
                     <p>Hello! My name is Umair Khan and I'm a B.Tech student majoring in Computer Science and Engineering. With a passion for analytics and programming, I specialize in Python and JavaScript and have experience working with the MERN stack. I have also developed strong analytical skills and am familiar with various analytics tools.
                              <br><br>
-                        Outside of academics, I am a sports enthusiast and have a keen interest in football. In fact, I was the captain of my high school football team. I also have a creative side and enjoy anime and photo editing.
+                        I have a strong background in analytics and have gained extensive experience in using analytics tools such as Tableau, Excel, Power BI , and Python for data analysis. I am also proficient in programming languages such as Java, JavaScript,  Additionally, my expertise in SQL , SAP , SAS  has allowed me to manipulate complex data sets, extract insights, and present them in a clear and concise manner.
                         <br> <br>
-                        As a self-motivated and dedicated individual, I bring a strong work ethic and attention to detail to everything I do. I am excited to continue honing my skills in the tech industry and look forward to exploring new opportunities. Feel free to reach out to me for any collaboration or work opportunities.
+                        I possess strong attention to detail and organizational skills, enabling me to manage complex tasks with precision and accuracy. I also have experience working collaboratively with cross-functional teams, and possess adaptability, innovative thinking, energy, and enthusiasm in approaching projects and tasks.
                     <br> <br>
                     My philosophy is to continuously learn and grow, while remaining adaptable and putting in persistent effort. I value teamwork and collaboration and prioritize integrity and honesty in all that I do.</p>
                     <div class="tab-titles">
@@ -57,9 +57,10 @@
                             <li><span>Python</span> <br></li>
                             <li><span>MERN stack</span><br></li>
                             <li><span>HTML/CSS</span><br></li>
-                            <li><span>Scratch</span><br></li>
+                            <li><span>Power BI</span><br></li>
                             <li><span>SQL</span><br></li>
                             <li><span>CI/CD Testing</span><br></li>
+                            <li><span>SAP</span><br></li>
                             <li><span>Django</span><br></li>
                             <li><span>Git</span><br></li>
                             <li><span>Tableau</span><br></li>
@@ -67,6 +68,7 @@
                             <li><span>Ajax</span><br></li>
                             <li><span>MS Ofice</span><br></li>
                             <li><span>Azure- 900 and Azure-104 </span><br></li>
+                            <li><span>SAS</span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -83,7 +85,7 @@
                     <div class="tab-contents" id="voulenteer">
                         <ul>
                             <li><span>Samajwadi party </span><br> Activist</li>
-                             <li><span>KNIPSS </span><br> Activist</li>
+                             <li><span>KNIPSS </span><br> Voulenteer</li>
                         </ul>
                     </div>
                     </div>
