--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="tab-contents" id="voulenteer">
                         <ul>
                             <li><span>Samajwadi party </span><br> Activist</li>
-                             <li><span>KNIPSS </span><br> Voulenteer</li>
+                             <li><span>KNIPSS </span><br> Volunteer</li>
                         </ul>
                     </div>
                     </div>
@@ -107,6 +107,9 @@
                         </a>
                         <a href="https://www.linkedin.com/in/umair-khan-a5348a202/" target="_blank">
                             <i class="uil uil-linkedin-alt"></i>
+                        </a>
+                        <a href="https://github.com/umairrrkhan" target="_blank">
+                            <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
                     <a href="images/HHH.pdf" download  class="btn btn2 ">Download resume</a>
