--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.png" >
+                    <img src="images/cats1.jpg" >
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
