--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                             <li><span>HTML/CSS</span><br></li>
                             <li><span>Power BI</span><br></li>
                             <li><span>SQL</span><br></li>
-                            <li><span>CI/CD Testing</span><br></li>
+                            <li><span>Sckit-learn</span><br></li>
                             <li><span>SAP</span><br></li>
-                            <li><span>Django</span><br></li>
+                            <li><span>Java</span><br></li>
                             <li><span>Git</span><br></li>
                             <li><span>Tableau</span><br></li>
                             <li><span>Excel</span><br></li>
-                            <li><span>Ajax</span><br></li>
-                            <li><span>MS Ofice</span><br></li>
+                            <li><span>NLP</span><br></li>
+                            <li><span>Tensorflow</span><br></li>
                             <li><span>Azure- 900 and Azure-104 </span><br></li>
                             <li><span>SAS</span><br></li>
                         </ul>
