--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                             <li><span>Power BI</span><br></li>
                             <li><span>SQL</span><br></li>
                             <li><span>Sckit-learn</span><br></li>
+                            <li><span>Pytorch</span><br></li>
                             <li><span>SAP</span><br></li>
                             <li><span>Java</span><br></li>
                             <li><span>Git</span><br></li>
@@ -68,7 +69,6 @@
                             <li><span>NLP</span><br></li>
                             <li><span>Tensorflow</span><br></li>
                             <li><span>Azure- 900 and Azure-104 </span><br></li>
-                            <li><span>SAS</span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
