--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h1 class="sub-title">About me</h1>
                     <p>Hello! My name is Umair Khan and I'm a B.Tech student majoring in Computer Science and Engineering. With a passion for analytics and programming, I specialize in Python and JavaScript and have experience working with the MERN stack. I have also developed strong analytical skills and am familiar with various analytics tools.
                              <br><br>
-                        I have a strong background in analytics and have gained extensive experience in using analytics tools such as Tableau, Excel, Power BI , and Python for data analysis. I am also proficient in programming languages such as Java, JavaScript,  Additionally, my expertise in SQL , SAP , SAS  has allowed me to manipulate complex data sets, extract insights, and present them in a clear and concise manner.
+                        I have a strong background in analytics and have gained extensive experience in using analytics tools such as Tableau, Excel, Power BI , and Python for data analysis. I am also proficient in programming languages such as Java, JavaScript,  Additionally, my expertise in SQL , SAP has allowed me to manipulate complex data sets, extract insights, and present them in a clear and concise manner. Im also profficient in using tools sckit-learn , Tensorflow .                        
                         <br> <br>
                         I possess strong attention to detail and organizational skills, enabling me to manage complex tasks with precision and accuracy. I also have experience working collaboratively with cross-functional teams, and possess adaptability, innovative thinking, energy, and enthusiasm in approaching projects and tasks.
                     <br> <br>
