--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
-                    <a href="images/DATA RESUME.pdf" download  class="btn btn2 ">Download resume</a>
+                    <a href="images/ml resume.pdf" download  class="btn btn2 ">Download resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
