--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
-                    <p>Hello! My name is Umair Khan and I'm a B.Tech student majoring in Computer Science and Engineering. With a passion for analytics and programming, I specialize in Python and JavaScript and have experience working with the MERN stack. I have also developed strong analytical skills and am familiar with various analytics tools.
+                    <p>Hello! My name is Umair Khan and I am a B.Tech student and my branch is CSE (Computer Science and Engineering). With a passion for analytics and programming, I specialize in Python and JavaScript and have experience working with the MERN stack. I have also developed strong analytical skills and am familiar with various analytics tools. I am also proficient in frontend development and have experience building interactive user interfaces using tools such as React.
                              <br><br>
-                        I have a strong background in analytics and have gained extensive experience in using analytics tools such as Tableau, Excel, Power BI , and Python for data analysis. I am also proficient in programming languages such as Java, JavaScript,  Additionally, my expertise in SQL , SAP has allowed me to manipulate complex data sets, extract insights, and present them in a clear and concise manner. Im also profficient in using tools scikit-learn , Tensorflow .                        
+                        As a self-taught ML Engineer with experience in working with popular ML libraries such as TensorFlow and Scikit-Learn, I have developed a strong skill set in frontend, NLP, deep learning, and data analysis. I have a strong background in analytics and have gained extensive experience in using analytics tools such as Tableau, Excel, Power BI , and Python for data analysis. I am also proficient in programming languages such as Java, JavaScript,  Additionally, my expertise in SQL has allowed me to manipulate complex data sets, extract insights, and present them in a clear and concise manner. 
                         <br> <br>
                         I possess strong attention to detail and organizational skills, enabling me to manage complex tasks with precision and accuracy. I also have experience working collaboratively with cross-functional teams, and possess adaptability, innovative thinking, energy, and enthusiasm in approaching projects and tasks.
                     <br> <br>
@@ -61,19 +61,18 @@
                             <li><span>SQL</span><br></li>
                             <li><span>Sckit-learn</span><br></li>
                             <li><span>Pytorch</span><br></li>
-                            <li><span>SAP</span><br></li>
                             <li><span>Java</span><br></li>
                             <li><span>Git</span><br></li>
                             <li><span>Tableau</span><br></li>
                             <li><span>Excel</span><br></li>
                             <li><span>NLP</span><br></li>
                             <li><span>Tensorflow</span><br></li>
-                            <li><span>Azure- 900 and Azure-104 </span><br></li>
+                            <li><span>Azure- 900 </span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Farid institute </span><br>Frontend django developer <br>09-22  12-22</li>
+                            <li><span>Farid institute </span><br>Frontend developer <br>09-22  12-22</li>
                             <li><span></span></li>
                         </ul>
                     </div>
@@ -112,7 +111,7 @@
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
-                    <a href="images/ml resume.pdf" download  class="btn btn2 ">Download resume</a>
+                    <a href="images/Resume data.pdf" download  class="btn btn2 ">Download resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
