Updated Added the new link

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div id="header">
         <div class="conatainer">
             <nav>
-                <img src="images/UMAIR-removebg-preview.png" class="logo">
+                <img alt="Umair Text" src="images/UMAIR-removebg-preview.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <i class="fas fa-times" onclick="closemenu()"></i>                
+                    <li><i class="fas fa-times" onclick="closemenu()"></li></i>                
                 </ul>
                 <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
@@ -101,13 +101,13 @@
                     <p><i class="fas fa-paper-plane"></i>umairh1819@gmail.com</p>
                     <p><i class="fas fa-phone-square-alt"></i>+918840002731</p>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/magpieee__/" target="_blank">
+                        <a href="https://www.instagram.com/magpieee__/" target="_blank" rel="noopener">
                             <i class="uil uil-instagram"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/umair-khan-a5348a202/" target="_blank">
+                        <a href="https://www.linkedin.com/in/umair-khan-a5348a202/" target="_blank" rel="noopener">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-                        <a href="https://github.com/umairrrkhan" target="_blank">
+                        <a href="https://github.com/umairrrkhan" target="_blank" rel="noopener">
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
