--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                             <li><span>Java</span><br></li>
                             <li><span>Git</span><br></li>
                             <li><span>Tableau</span><br></li>
-                            <li><span>Excel</span><br></li>
+                            <li><span>Numpy</span><br></li>
+                            <li><span>Panda</span><br></li>
                             <li><span>NLP</span><br></li>
                             <li><span>Tensorflow</span><br></li>
                             <li><span>Azure- 900 </span><br></li>
