--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                         <a href="https://www.instagram.com/magpieee__/" target="_blank" rel="noopener">
                             <i class="uil uil-instagram"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/umair-khan-a5348a202/" target="_blank" rel="noopener">
+                        <a href="https://www.linkedin.com/in/umairkhannn/" target="_blank" rel="noopener">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
                         <a href="https://github.com/umairrrkhan" target="_blank" rel="noopener">
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
-                    <a href="images/Umair_khan_ML.pdf" download  class="btn btn2 ">Download resume</a>
+                    <a href="images/Umair_khan_SWE" download  class="btn btn2 ">Download resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
