--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>ML Engineer</p>
+                <p>ML Engineer & SWE</p>
                 <h1>Hi I'am <span> <br> Umair</span><br></h1>
             </div>
         </div>
@@ -38,13 +38,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
-                    <p>Hello! My name is Umair Khan and I am a B.Tech student and my branch is CSE (Computer Science and Engineering). With a passion for analytics and programming, I specialize in Python and JavaScript and have experience working with the MERN stack. I have also developed strong analytical skills and am familiar with various analytics tools. I am also proficient in frontend development and have experience building interactive user interfaces using tools such as React.
+                    <p>As a passionate Machine Learning and Software Engineer, I thrive on exploring the intersection of AI, deep learning, and software development to create impactful solutions. With hands-on experience in developing and deploying AI models, I am adept at leveraging a diverse skill set that includes Python, TensorFlow, PyTorch, and OpenCV to tackle complex challenges.
                              <br><br>
-                        As a self-taught ML Engineer with experience in working with popular ML libraries such as TensorFlow and Scikit-Learn, I have developed a strong skill set in frontend, NLP, deep learning, and data analysis. I have a strong background in analytics and have gained extensive experience in using analytics tools such as Tableau, Excel, Power BI , and Python for data analysis. I am also proficient in programming languages such as Java, JavaScript,  Additionally, my expertise in SQL has allowed me to manipulate complex data sets, extract insights, and present them in a clear and concise manner. 
+                        My journey in the field of AI and ML has been shaped by diverse experiences, from refining inference classes for model deployment to pioneering projects in generative art with advanced DCGAN models. I am driven by a curiosity to push the boundaries of technology and continuously enhance my expertise.
                         <br> <br>
-                        I possess strong attention to detail and organizational skills, enabling me to manage complex tasks with precision and accuracy. I also have experience working collaboratively with cross-functional teams, and possess adaptability, innovative thinking, energy, and enthusiasm in approaching projects and tasks.
+                        Beyond my technical skills, I bring a collaborative spirit and a commitment to excellence to every project I undertake. Whether it's refactoring frontend code for improved performance or developing dynamic user interfaces with React.js, I am dedicated to delivering high-quality solutions that exceed expectations.
                     <br> <br>
-                    My philosophy is to continuously learn and grow, while remaining adaptable and putting in persistent effort. I value teamwork and collaboration and prioritize integrity and honesty in all that I do.</p>
+                    With a solid foundation in computer science and engineering complemented by practical experience in web development and cloud technologies, I am poised to make meaningful contributions to any team or project I join.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link"onclick='opentab("skills")'>Skill</p>
                         <p class="tab-links" onclick='opentab("experience")' >Experience</p>
@@ -53,27 +53,35 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills" >
                         <ul>
+                            <li><span>Python</span><br></li>
+                            <li><span>Java</span> <br></li>
                             <li><span>Javascript</span><br></li>
-                            <li><span>Python</span> <br></li>
-                            <li><span>MERN stack</span><br></li>
-                            <li><span>HTML/CSS</span><br></li>
-                            <li><span>Power BI</span><br></li>
-                            <li><span>SQL</span><br></li>
-                            <li><span>Sckit-learn</span><br></li>
-                            <li><span>Pytorch</span><br></li>
-                            <li><span>Java</span><br></li>
-                            <li><span>Git</span><br></li>
-                            <li><span>Tableau</span><br></li>
-                            <li><span>Numpy</span><br></li>
-                            <li><span>Panda</span><br></li>
-                            <li><span>NLP</span><br></li>
+                            <li><span>C++</span><br></li>
+                            <li><span>Django</span><br></li>
+                            <li><span>Node js</span><br></li>
+                            <li><span>React js</span><br></li>
+                            <li><span>Flask</span><br></li>
+                            <li><span>OpenCv</span><br></li>
                             <li><span>Tensorflow</span><br></li>
-                            <li><span>Azure- 900 </span><br></li>
+                            <li><span>Pytorch</span><br></li>
+                            <li><span>Scikit Learn</span><br></li>
+                            <li><span>Tableau/Excel/Power Bi </span><br></li>
+                            <li><span>NLP</span><br></li>
+                            <li><span>SQL / Mongo Db </span><br></li>
+                            <li><span>AWS</span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Farid institute </span><br>Frontend developer <br>09-22  12-22</li>
+                            <li><span>Spacept </span><br>AI Intern <br>DEC - 2023   Feb - 2024 </li>
+                            <li><span></span></li>
+                        </ul>
+                        <ul>
+                            <li><span>YBI Foundation </span><br>AI Intern <br>AUG - 2023   OCT - 2023 </li>
+                            <li><span></span></li>
+                        </ul>
+                        <ul>
+                            <li><span>Farid institute </span><br>Frontend developer <br> SEP-2022  Dec-2022</li>
                             <li><span></span></li>
                         </ul>
                     </div>
