--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Spacept </span><br>AI Intern <br>DEC - 2023   Feb - 2024 </li>
+                            <li><span>Spacept </span><br>ML Engineer Intern <br>DEC - 2023   Feb - 2024 </li>
                             <li><span></span></li>
                         </ul>
                         <ul>
