--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>ML Engineer & SWE</p>
+                <p>ML Engineer </p>
                 <h1>Hi I'am <span> <br> Umair</span><br></h1>
             </div>
         </div>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
-                    <p>As a passionate Machine Learning and Software Engineer, I thrive on exploring the intersection of AI, deep learning, and software development to create impactful solutions. With hands-on experience in developing and deploying AI models, I am adept at leveraging a diverse skill set that includes Python, TensorFlow, PyTorch, and OpenCV to tackle complex challenges.
+                    <p>As a passionate Machine Learning Engineer, I thrive on exploring the intersection of AI, deep learning, and software development to create impactful solutions. With hands-on experience in developing and deploying AI models, I am adept at leveraging a diverse skill set that includes Python, TensorFlow, PyTorch, and OpenCV to tackle complex challenges.
                              <br><br>
                         My journey in the field of AI and ML has been shaped by diverse experiences, from refining inference classes for model deployment to pioneering projects in generative art with advanced DCGAN models. I am driven by a curiosity to push the boundaries of technology and continuously enhance my expertise.
                         <br> <br>
@@ -56,10 +56,6 @@
                             <li><span>Python</span><br></li>
                             <li><span>Java</span> <br></li>
                             <li><span>Javascript</span><br></li>
-                            <li><span>C++</span><br></li>
-                            <li><span>Django</span><br></li>
-                            <li><span>Node js</span><br></li>
-                            <li><span>React js</span><br></li>
                             <li><span>Flask</span><br></li>
                             <li><span>OpenCv</span><br></li>
                             <li><span>Tensorflow</span><br></li>
@@ -68,7 +64,6 @@
                             <li><span>Tableau/Excel/Power Bi </span><br></li>
                             <li><span>NLP</span><br></li>
                             <li><span>SQL / Mongo Db </span><br></li>
-                            <li><span>AWS</span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -77,11 +72,7 @@
                             <li><span></span></li>
                         </ul>
                         <ul>
-                            <li><span>YBI Foundation </span><br>AI Intern <br>AUG - 2023   OCT - 2023 </li>
-                            <li><span></span></li>
-                        </ul>
-                        <ul>
-                            <li><span>Farid institute </span><br>Frontend developer <br> SEP-2022  Dec-2022</li>
+                            <li><span>YBI Foundation </span><br>AI Intern <br>Oct - 2023   Nov - 2023 </li>
                             <li><span></span></li>
                         </ul>
                     </div>
@@ -92,7 +83,6 @@
                     </div>
                     <div class="tab-contents" id="voulenteer">
                         <ul>
-                            <li><span>Samajwadi party </span><br> Activist</li>
                              <li><span>KNIPSS </span><br> Volunteer</li>
                         </ul>
                     </div>
@@ -110,7 +100,7 @@
                     <p><i class="fas fa-paper-plane"></i>umairh1819@gmail.com</p>
                     <p><i class="fas fa-phone-square-alt"></i>+918840002731</p>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/magpieee__/" target="_blank" rel="noopener">
+                        <a href="https://www.instagram.com/urfavrtstarboy/" target="_blank" rel="noopener">
                             <i class="uil uil-instagram"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/umairkhannn/" target="_blank" rel="noopener">
