--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
-                    <a href="images/Umair_khan_SWE.docx" download  class="btn btn2 ">Download resume</a>
+                    <a href="images/Umair_Khan_resume.pdf" download  class="btn btn2 ">Download resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
