--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
-                    <p>As a passionate Machine Learning Engineer, I thrive on exploring the intersection of AI, deep learning, and software development to create impactful solutions. With hands-on experience in developing and deploying AI models, I am adept at leveraging a diverse skill set that includes Python, TensorFlow, PyTorch, and OpenCV to tackle complex challenges.
+                    <p>I'm a fresh Computer Science graduate with an insatiable appetite for AI and Machine Learning. While my degree from Kamla Nehru Institute is new, my passion for pushing tech boundaries has been brewing for years. I don't just see algorithms; I see solutions to real-world puzzles.
                              <br><br>
-                        My journey in the field of AI and ML has been shaped by diverse experiences, from refining inference classes for model deployment to pioneering projects in generative art with advanced DCGAN models. I am driven by a curiosity to push the boundaries of technology and continuously enhance my expertise.
+                        My journey has led me through diverse AI landscapes—from teaching machines to detect online toxicity to predicting financial crises. Recent internships at Spacept and Ybi Foundation weren't just jobs, but playgrounds where I upgraded ML systems and breathed life into inference models as I embark on my professional path, I'm not just seeking employment; I'm on a quest to contribute to the AI revolution. Armed with Python and frameworks like TensorFlow and PyTorch, I'm ready to transform complex data into intelligent solutions.
                         <br> <br>
-                        Beyond my technical skills, I bring a collaborative spirit and a commitment to excellence to every project I undertake. Whether it's refactoring frontend code for improved performance or developing dynamic user interfaces with React.js, I am dedicated to delivering high-quality solutions that exceed expectations.
-                    <br> <br>
-                    With a solid foundation in computer science and engineering complemented by practical experience in web development and cloud technologies, I am poised to make meaningful contributions to any team or project I join.</p>
+                        My toolkit includes a solid foundation in computer vision, NLP, and data analysis, complemented by a knack for problem-solving and an eagerness to learn. I thrive on challenges that push me to expand my skills and knowledge.
+                        <br> <br>
+                        If you're looking for a blend of fresh perspective and tech enthusiasm, let's connect. Together, we could shape the future of AI, turning data into insights and ideas into innovations. Ready to explore the possibilities? </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link"onclick='opentab("skills")'>Skill</p>
                         <p class="tab-links" onclick='opentab("experience")' >Experience</p>
@@ -55,8 +55,8 @@
                         <ul>
                             <li><span>Python</span><br></li>
                             <li><span>Java</span> <br></li>
-                            <li><span>Javascript</span><br></li>
-                            <li><span>Flask</span><br></li>
+                            <li><span>Docker</span><br></li>
+                            <li><span>AWS</span><br></li>
                             <li><span>OpenCv</span><br></li>
                             <li><span>Tensorflow</span><br></li>
                             <li><span>Pytorch</span><br></li>
@@ -72,13 +72,13 @@
                             <li><span></span></li>
                         </ul>
                         <ul>
-                            <li><span>YBI Foundation </span><br>AI Intern <br>Oct - 2023   Nov - 2023 </li>
+                            <li><span>YBI Foundation </span><br>MI Intern <br>Oct - 2023   Nov - 2023 </li>
                             <li><span></span></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>Kamla Nehru Institute of physical and social science</span><br>11/2020  -   current</li>
+                            <li><span>Kamla Nehru Institute of physical and social sciences</span><br>11/2020  -   07/2024</li>
                             <li><span>St. Xavier's high school</span></li>
                     </div>
                     <div class="tab-contents" id="voulenteer">
